--- a/wp-content/themes/missilethreat/assets/_scss/components/_post-meta.scss
+++ b/wp-content/themes/missilethreat/assets/_scss/components/_post-meta.scss
@@ -9,6 +9,5 @@
 
   &__authors {
     color: $color-primary-blue-200;
-    margin-bottom: rem(16px);
   }
 }
